--- a/index.html
+++ b/index.html
@@ -8,37 +8,66 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <header class="page-header">
       <!-- Site nav -->
-      <nav>
-        <a href="./index.html" class="main-logo">
-          <span class="logo">Web</span> <span class="logo-two">Studio</span></a
-        >
-        <ul class="site-nav list" title="nav">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="container main-nav">
+        <nav>
+          <div class="logo">
+            <a href="./index.html" class="main-logo">
+              <span class="logo">Web</span>
+              <span class="logo-two">Studio</span></a
+            >
+          </div>
+          <div class="site-nav">
+            <ul class="site-nav list" title="nav">
+              <li class="item">
+                <a href="./index.html" class="link current">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="item"><a href="" class="link">Контакты</a></li>
+            </ul>
+          </div>
+        </nav>
 
-      <ul class="contact-nav list">
-        <li>
-          <img src="./images/envelope.svg" alt="конверт" />
-        </li>
-        <li><a href="" class="link">info@devstudio.com</a></li>
-        <li>
-          <img src="./images/phone.svg" alt="смартфон" />
-        </li>
-        <li><a href="" class="link">+38 096 111 11 11</a></li>
-      </ul>
+        <div class="contacts">
+          <ul class="contact-nav list">
+            <li>
+              <img
+                src="./images/envelope.svg"
+                alt="конверт"
+                class="nav-image"
+              />
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <img src="./images/phone.svg" alt="смартфон" class="link" />
+            </li>
+            <li class="item">
+              <a href="callto:+38 096 111 11 11" class="link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
-      <div>
+      <div class="container">
         <!-- Hero -->
         <section class="hero">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -47,288 +76,266 @@
       </div>
 
       <!-- Section Benefits -->
-      <section class="section">
-        <h2 class="section-title">Преимущества</h2>
-        <ul class="benefits">
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/tarelka.svg" alt="Спутниковая тарелка" />
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
+      <section class="section-no-padding">
+        <div class="container">
+          <h2 class="section-title">Преимущества</h2>
+          <ul class="benefits">
+            <li class="list">
+              <a href=""></a>
+              <img src="./images/tarelka.svg" alt="Спутниковая тарелка" />
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/clock1.svg" alt="Часы" />
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
+            <li class="list">
+              <a href=""></a>
+              <img src="./images/clock1.svg" alt="Часы" />
+              <h3 class="title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/diagram1.svg" alt="Диаграмма" />
-            <h3 class="title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
+            <li class="list">
+              <a href=""></a>
+              <img src="./images/diagram1.svg" alt="Диаграмма" />
+              <h3 class="title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/astronaut1.svg" alt="Астронавт" />
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+            <li class="list">
+              <a href=""></a>
+              <img src="./images/astronaut1.svg" alt="Астронавт" />
+              <h3 class="title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section Work -->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/desktop.jpg"
-              alt="Лептоп"
-              width="380"
-              height="294"
-            />
-            <h3 class="title">Десктопные приложения</h3>
-          </li>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="work-list">
+            <li class="list">
+              <a href=""></a>
+              <img
+                src="./images/desktop.jpg"
+                alt="Лептоп"
+                width="380"
+                height="294"
+              />
+              <h3 class="title">Десктопные приложения</h3>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/mobapps.jpg"
-              alt="Смартфон"
-              width="380"
-              height="294"
-            />
-            <h3 class="title">Мобильные приложения</h3>
-          </li>
+            <li class="list">
+              <a href=""></a>
+              <img
+                src="./images/mobapps.jpg"
+                alt="Смартфон"
+                width="380"
+                height="294"
+              />
+              <h3 class="title">Мобильные приложения</h3>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/design.jpg"
-              alt="Десктоп"
-              width="380"
-              height="294"
-            />
-            <h3 class="title">Дизайнерские решения</h3>
-          </li>
-        </ul>
+            <li class="list">
+              <a href=""></a>
+              <img
+                src="./images/design.jpg"
+                alt="Десктоп"
+                width="380"
+                height="294"
+              />
+              <h3 class="title">Дизайнерские решения</h3>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section Team -->
-      <section class="section team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="list">
-            <img
-              src="./images/John.jpg"
-              alt="фото Джона"
-              width="278"
-              height="260"
-            />
-            <h3 class="name">John Smith</h3>
-            <p class="role">Product Designer</p>
-            <ul>
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/instagram.svg" alt="логотип Istagram" />
-              </li>
+      <section class="section-no-padding team">
+        <div class="container">
+          <h2 class="section-title-padding">Наша команда</h2>
+          <ul class="team-list">
+            <li class="list">
+              <img
+                src="./images/John.jpg"
+                alt="фото Джона"
+                width="278"
+                height="260"
+              />
+              <h3 class="name">John Smith</h3>
+              <p class="role">Product Designer</p>
+              <ul>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/instagram.svg" alt="логотип Istagram" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/twit.svg" alt="логотип Twitter" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/twit.svg" alt="логотип Twitter" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/facebook.svg" alt="логотип Facebook" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/facebook.svg" alt="логотип Facebook" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
-              </li>
-            </ul>
-          </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
+                </li>
+              </ul>
+            </li>
 
-          <li class="list">
-            <img
-              src="./images/Marta.jpg"
-              alt="фото Марты"
-              width="278"
-              height="260"
-            />
-            <h3 class="name">Marta Stewart</h3>
-            <p class="role">Frontend Developer</p>
-            <ul>
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/instagram.svg" alt="логотип Istagram" />
-              </li>
+            <li class="list">
+              <img
+                src="./images/Marta.jpg"
+                alt="фото Марты"
+                width="278"
+                height="260"
+              />
+              <h3 class="name">Marta Stewart</h3>
+              <p class="role">Frontend Developer</p>
+              <ul>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/instagram.svg" alt="логотип Istagram" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/twit.svg" alt="логотип Twitter" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/twit.svg" alt="логотип Twitter" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/facebook.svg" alt="логотип Facebook" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/facebook.svg" alt="логотип Facebook" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
-              </li>
-            </ul>
-          </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
+                </li>
+              </ul>
+            </li>
 
-          <li class="list">
-            <img
-              src="./images/Robert.jpg"
-              alt="фото Роберта"
-              width="278"
-              height="260"
-            />
-            <h3 class="name">Robert Jakis</h3>
-            <p class="role">Marketing</p>
-            <ul>
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/instagram.svg" alt="логотип Istagram" />
-              </li>
+            <li class="list">
+              <img
+                src="./images/Robert.jpg"
+                alt="фото Роберта"
+                width="278"
+                height="260"
+              />
+              <h3 class="name">Robert Jakis</h3>
+              <p class="role">Marketing</p>
+              <ul>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/instagram.svg" alt="логотип Istagram" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/twit.svg" alt="логотип Twitter" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/twit.svg" alt="логотип Twitter" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/facebook.svg" alt="логотип Facebook" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/facebook.svg" alt="логотип Facebook" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
-              </li>
-            </ul>
-          </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
+                </li>
+              </ul>
+            </li>
 
-          <li class="list">
-            <img
-              src="./images/Martin.jpg"
-              alt="фото Мартина"
-              width="278"
-              height="260"
-            />
-            <h3 class="name">Martin Doe</h3>
-            <p class="role">UI Designer</p>
-            <ul>
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/instagram.svg" alt="логотип Istagram" />
-              </li>
+            <li class="list">
+              <img
+                src="./images/Martin.jpg"
+                alt="фото Мартина"
+                width="278"
+                height="260"
+              />
+              <h3 class="name">Martin Doe</h3>
+              <p class="role">UI Designer</p>
+              <ul>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/instagram.svg" alt="логотип Istagram" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/twit.svg" alt="логотип Twitter" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/twit.svg" alt="логотип Twitter" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/facebook.svg" alt="логотип Facebook" />
-              </li>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/facebook.svg" alt="логотип Facebook" />
+                </li>
 
-              <li class="list">
-                <a href=""></a>
-                <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
-              </li>
-            </ul>
-          </li>
-        </ul>
+                <li class="list">
+                  <a href=""></a>
+                  <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Secction Clients -->
       <section class="section">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <ul>
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/logo1.svg"
-              alt="Имя компании"
-              width="44"
-              height="47"
-            />
-          </li>
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list">
+            <li>
+              <a href=""></a>
+              <img src="./images/logo1.svg" alt="Имя компании" />
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/logo2.svg"
-              alt="Имя компании"
-              width="40"
-              height="52"
-            />
-          </li>
+            <li>
+              <a href=""></a>
+              <img src="./images/logo2.svg" alt="Имя компании" />
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/logo3.svg"
-              alt="Имя компании"
-              width="41"
-              height="41"
-            />
-          </li>
+            <li>
+              <a href=""></a>
+              <img src="./images/logo3.svg" alt="Имя компании" />
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/logo4.svg"
-              alt="Имя компании"
-              width="82"
-              height="40"
-            />
-          </li>
+            <li>
+              <a href=""></a>
+              <img src="./images/logo4.svg" alt="Имя компании" />
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/logo5.svg"
-              alt="Имя компании"
-              width="59"
-              height="47"
-            />
-          </li>
+            <li>
+              <a href=""></a>
+              <img src="./images/logo5.svg" alt="Имя компании" />
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img
-              src="./images/logo6.svg"
-              alt="Имя компании"
-              width="88"
-              height="44"
-            />
-          </li>
-        </ul>
+            <li>
+              <a href=""></a>
+              <img src="./images/logo6.svg" alt="Имя компании" />
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
@@ -338,7 +345,7 @@
           <span class="footer-logo">Web</span>
           <span class="footer-logo-two">Studio</span></a
         >
-        <address class="contacts">
+        <address class="info">
           <ul class="list">
             <li class="address">
               <a href="">г. Киев, пр-т Леси Украинки, 26</a>
