--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <header class="page-header">
       <!-- Site nav -->
       <div class="container main-nav">
+        <div class="logo">
+          <a href="./index.html" class="main-logo">
+            <span class="logo">Web</span>
+            <span class="logo-two">Studio</span></a
+          >
+        </div>
         <nav>
-          <div class="logo">
-            <a href="./index.html" class="main-logo">
-              <span class="logo">Web</span>
-              <span class="logo-two">Studio</span></a
-            >
-          </div>
           <div class="site-nav">
             <ul class="site-nav list" title="nav">
               <li class="item">
@@ -41,22 +41,24 @@
 
         <div class="contacts">
           <ul class="contact-nav list">
-            <li>
+            <li class="item">
               <img
                 src="./images/envelope.svg"
                 alt="конверт"
                 class="nav-image"
               />
-            </li>
-            <li class="item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <img src="./images/phone.svg" alt="смартфон" class="link" />
-            </li>
+
             <li class="item">
+              <img
+                src="./images/phone.svg"
+                alt="смартфон"
+                class="link"
+                class="nav-image"
+              />
               <a href="callto:+38 096 111 11 11" class="link"
                 >+38 096 111 11 11</a
               >
