--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <img
                 src="./images/desktop.jpg"
                 alt="Лептоп"
-                width="380"
+                width="370"
                 height="294"
               />
               <h3 class="title">Десктопные приложения</h3>
@@ -146,7 +146,7 @@
               <img
                 src="./images/mobapps.jpg"
                 alt="Смартфон"
-                width="380"
+                width="370"
                 height="294"
               />
               <h3 class="title">Мобильные приложения</h3>
@@ -157,7 +157,7 @@
               <img
                 src="./images/design.jpg"
                 alt="Десктоп"
-                width="380"
+                width="370"
                 height="294"
               />
               <h3 class="title">Дизайнерские решения</h3>
@@ -175,28 +175,28 @@
               <img
                 src="./images/John.jpg"
                 alt="фото Джона"
-                width="278"
+                width="270"
                 height="260"
               />
               <h3 class="name">John Smith</h3>
               <p class="role">Product Designer</p>
-              <ul>
-                <li class="list">
+              <ul class="logo-list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/instagram.svg" alt="логотип Istagram" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/twit.svg" alt="логотип Twitter" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/facebook.svg" alt="логотип Facebook" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
                 </li>
@@ -207,28 +207,28 @@
               <img
                 src="./images/Marta.jpg"
                 alt="фото Марты"
-                width="278"
+                width="270"
                 height="260"
               />
               <h3 class="name">Marta Stewart</h3>
               <p class="role">Frontend Developer</p>
-              <ul>
-                <li class="list">
+              <ul class="logo-list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/instagram.svg" alt="логотип Istagram" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/twit.svg" alt="логотип Twitter" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/facebook.svg" alt="логотип Facebook" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
                 </li>
@@ -239,28 +239,28 @@
               <img
                 src="./images/Robert.jpg"
                 alt="фото Роберта"
-                width="278"
+                width="270"
                 height="260"
               />
               <h3 class="name">Robert Jakis</h3>
               <p class="role">Marketing</p>
-              <ul>
-                <li class="list">
+              <ul class="logo-list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/instagram.svg" alt="логотип Istagram" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/twit.svg" alt="логотип Twitter" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/facebook.svg" alt="логотип Facebook" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
                 </li>
@@ -271,28 +271,28 @@
               <img
                 src="./images/Martin.jpg"
                 alt="фото Мартина"
-                width="278"
+                width="270"
                 height="260"
               />
               <h3 class="name">Martin Doe</h3>
               <p class="role">UI Designer</p>
-              <ul>
-                <li class="list">
+              <ul class="logo-list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/instagram.svg" alt="логотип Istagram" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/twit.svg" alt="логотип Twitter" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/facebook.svg" alt="логотип Facebook" />
                 </li>
 
-                <li class="list">
+                <li class="list-logo">
                   <a href=""></a>
                   <img src="./images/Linkedin.svg" alt="логотип LinkedIn" />
                 </li>
@@ -302,37 +302,37 @@
         </div>
       </section>
 
-      <!-- Secction Clients -->
+      <!-- Section Clients -->
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="list">
-            <li>
+          <ul class="clients-list">
+            <li class="item">
               <a href=""></a>
               <img src="./images/logo1.svg" alt="Имя компании" />
             </li>
 
-            <li>
+            <li class="item">
               <a href=""></a>
               <img src="./images/logo2.svg" alt="Имя компании" />
             </li>
 
-            <li>
+            <li class="item">
               <a href=""></a>
               <img src="./images/logo3.svg" alt="Имя компании" />
             </li>
 
-            <li>
+            <li class="item">
               <a href=""></a>
               <img src="./images/logo4.svg" alt="Имя компании" />
             </li>
 
-            <li>
+            <li class="item">
               <a href=""></a>
               <img src="./images/logo5.svg" alt="Имя компании" />
             </li>
 
-            <li>
+            <li class="item">
               <a href=""></a>
               <img src="./images/logo6.svg" alt="Имя компании" />
             </li>
