добавляет другой класс клиентам

--- a/index.html
+++ b/index.html
@@ -307,32 +307,32 @@
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list">
-            <li class="item">
+            <li class="client-img">
               <a href=""></a>
               <img src="./images/logo1.svg" alt="Имя компании" />
             </li>
 
-            <li class="item">
+            <li class="client-img">
               <a href=""></a>
               <img src="./images/logo2.svg" alt="Имя компании" />
             </li>
 
-            <li class="item">
+            <li class="client-img">
               <a href=""></a>
               <img src="./images/logo3.svg" alt="Имя компании" />
             </li>
 
-            <li class="item">
+            <li class="client-img">
               <a href=""></a>
               <img src="./images/logo4.svg" alt="Имя компании" />
             </li>
 
-            <li class="item">
+            <li class="client-img">
               <a href=""></a>
               <img src="./images/logo5.svg" alt="Имя компании" />
             </li>
 
-            <li class="item">
+            <li class="client-img">
               <a href=""></a>
               <img src="./images/logo6.svg" alt="Имя компании" />
             </li>
