добавляет стили портфолио

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="main-footer">
+      <div class="container main-footer">
         <div class="info">
           <a href="./index.html" class="footer-logo">
             <span class="footer-logo">Web</span>
@@ -409,7 +409,6 @@
 
         <div>
           <p class="footer-text"><b>Подпишитесь на рассылку</b></p>
-          <p>E-mail</p>
           <a href="" class="button">Подписаться</a>
         </div>
       </div>
