--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,204 +14,314 @@
   <body class="page">
     <header class="page-header">
       <!-- Site nav -->
-      <nav>
-        <a href="./index.html" class="main-logo">
-          <span class="logo">Web</span> <span class="logo-two">Studio</span></a
-        >
-        <ul class="site-nav list" title="nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="container main-nav">
+        <div class="logo">
+          <a href="./index.html" class="main-logo">
+            <span class="logo">Web</span>
+            <span class="logo-two">Studio</span></a
+          >
+        </div>
+        <nav>
+          <div class="site-nav">
+            <ul class="site-nav list" title="nav">
+              <li class="item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="item"><a href="" class="link">Контакты</a></li>
+            </ul>
+          </div>
+        </nav>
 
-      <ul class="contact-nav list">
-        <li>
-          <img src="./images/envelope.svg" alt="конверт" />
-        </li>
-        <li><a href="" class="link">info@devstudio.com</a></li>
-        <li>
-          <img src="./images/phone.svg" alt="смартфон" />
-        </li>
-        <li><a href="" class="link">+38 096 111 11 11</a></li>
-      </ul>
+        <div class="contacts">
+          <ul class="contact-nav list">
+            <li class="item">
+              <img
+                src="./images/envelope.svg"
+                alt="конверт"
+                class="nav-image"
+              />
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+
+            <li class="item">
+              <img src="./images/phone.svg" alt="смартфон" class="nav-image" />
+              <a href="callto:+38 096 111 11 11" class="link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
-      <section class="section">
-        <h1 class="section-title">Портфолио</h1>
-        <ul class="list">
-          <li><button class="button-primary" type="button">Все</button></li>
-          <li>
-            <button class="button-primary" type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button class="button-primary" type="button">Приложения</button>
-          </li>
-          <li><button class="button-primary" type="button">Дизайн</button></li>
-          <li>
-            <button class="button-primary" type="button">Маркетинг</button>
-          </li>
-        </ul>
+      <div class="container">
+        <section class="main-section">
+          <h1 class="hidden-title">Портфолио</h1>
+          <ul class="portfolio-list">
+            <li class="unit">
+              <button class="button-primary" type="button">Все</button>
+            </li>
+            <li>
+              <button class="button-primary" type="button">Веб-сайты</button>
+            </li>
+            <li class="unit">
+              <button class="button-primary" type="button">Приложения</button>
+            </li>
+            <li class="unit">
+              <button class="button-primary" type="button">Дизайн</button>
+            </li>
+            <li class="unit">
+              <button class="button-primary" type="button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul>
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/technokriak.jpg" alt="Технокряк" />
-            <h2 class="section-title">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
-            <p class="explanation">
+          <ul class="works-list">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/technokriak.jpg"
+                alt="Технокряк"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/poster.jpg" alt="Постер" />
-            <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
-            <p class="text">Дизайн</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/poster.jpg"
+                alt="Постер"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
+                <p class="text">Дизайн</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/seafood.jpg" alt="Ресторан" />
-            <h2 class="section-title">Ресторан Seafood</h2>
-            <p class="text">Приложение</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/seafood.jpg"
+                alt="Ресторан"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Ресторан Seafood</h2>
+                <p class="text">Приложение</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/prime.jpg" alt="Прайм" />
-            <h2 class="section-title">Проект Prime</h2>
-            <p class="text">Маркетинг</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/prime.jpg"
+                alt="Прайм"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Проект Prime</h2>
+                <p class="text">Маркетинг</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/boxes.jpg" alt="Боксы" />
-            <h2 class="section-title">Проект Boxes</h2>
-            <p class="text">Приложение</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/boxes.jpg"
+                alt="Боксы"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Проект Boxes</h2>
+                <p class="text">Приложение</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/inspiration.jpg" alt="Веб-сайт" />
-            <h2 class="section-title">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/inspiration.jpg"
+                alt="Веб-сайт"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/limited.jpg" alt="Лимитед" />
-            <h2 class="section-title">Издание Limited Edition</h2>
-            <p class="text">Дизайн</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/limited.jpg"
+                alt="Лимитед"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Издание Limited Edition</h2>
+                <p class="text">Дизайн</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/lab.jpg" alt="Проект ЛАБ" />
-            <h2 class="section-title">Проект LAB</h2>
-            <p class="text">Маркетинг</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/lab.jpg"
+                alt="Проект ЛАБ"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Проект LAB</h2>
+                <p class="text">Маркетинг</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
+            </p> -->
+              </div>
+            </li>
 
-          <li class="list">
-            <a href=""></a>
-            <img src="./images/growing.jpg" alt="Приложение" />
-            <h2 class="section-title">Growing Business</h2>
-            <p class="text">Приложение</p>
-            <p class="explanation">
+            <li class="examples">
+              <a href=""></a>
+              <img
+                src="./images/growing.jpg"
+                alt="Приложение"
+                width="370"
+                height="294"
+              />
+              <div class="content">
+                <h2 class="section-title">Growing Business</h2>
+                <p class="text">Приложение</p>
+                <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
               Компании используют эту платформу для цифрового шпионажа и атак на
               защищённые сервера конкурентов.
-            </p>
-          </li>
-        </ul>
-      </section>
+            </p> -->
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
 
-    <footer>
-      <div>
-        <a href="./index.html" class="footer-logo">
-          <span class="footer-logo">Web</span>
-          <span class="footer-logo-two">Studio</span></a
-        >
-        <address class="contacts">
-          <ul class="list">
-            <li class="address">
-              <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+    <footer class="page-footer">
+      <div class="container main-footer">
+        <div class="info">
+          <a href="./index.html" class="footer-logo">
+            <span class="footer-logo">Web</span>
+            <span class="footer-logo-two">Studio</span></a
+          >
+          <address>
+            <ul class="info-list">
+              <li class="address">
+                <a class="map" href="">г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+            </ul>
+            <ul class="contact-list">
+              <li class="contact"><a href="">info@example.com</a></li>
+              <li class="contact"><a href="">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="secondary-footer">
+          <p class="footer-text"><b>Присоединяйтесь</b></p>
+          <ul class="logos-list">
+            <li class="logo-img">
+              <a href="" aria-label="link to Instagram"></a>
+              <img
+                class="logos"
+                src="./images/insta1.svg"
+                alt="логотип Instagram"
+              />
             </li>
-            <li class="contact"><a href="">info@example.com</a></li>
-            <li class="contact"><a href="">+38 099 111 11 11</a></li>
+
+            <li class="logo-img">
+              <a href="" aria-label="link to Twitter"></a>
+              <img
+                class="logos"
+                src="./images/twitter1.svg"
+                alt="логотип Twitter"
+              />
+            </li>
+
+            <li class="logo-img">
+              <a href="" aria-label="link to Facebook"></a>
+              <img
+                class="logos"
+                src="./images/facebook1.svg"
+                alt="логотип Facebook"
+              />
+            </li>
+
+            <li class="logo-img">
+              <a href="" aria-label="link to LinkedIn"></a>
+              <img
+                class="logos"
+                src="./images/Linkedin1.svg"
+                alt="логотип LinkedIn"
+              />
+            </li>
           </ul>
-        </address>
-      </div>
+        </div>
 
-      <div>
-        <p class="footer-text"><b>Присоединяйтесь</b></p>
-        <ul class="list">
-          <li>
-            <a href="" aria-label="link to Instagram"></a>
-            <img src="./images/insta1.svg" alt="логотип Instagram" />
-          </li>
-
-          <li>
-            <a href="" aria-label="link to Twitter"></a>
-            <img src="./images/twitter1.svg" alt="логотип Twitter" />
-          </li>
-
-          <li>
-            <a href="" aria-label="link to Facebook"></a>
-            <img src="./images/facebook1.svg" alt="логотип Facebook" />
-          </li>
-
-          <li>
-            <a href="" aria-label="link to LinkedIn"></a>
-            <img src="./images/Linkedin1.svg" alt="логотип LinkedIn" />
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p class="footer-text"><b>Подпишитесь на рассылку</b></p>
-        <p>E-mail</p>
-        <a href="" class="button-secondary">Подписаться</a>
+        <div>
+          <p class="footer-text"><b>Подпишитесь на рассылку</b></p>
+          <a href="" class="button-secondary">Подписаться</a>
+        </div>
       </div>
       <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
