--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
                 height="294"
               />
               <div class="content">
-                <h2 class="section-title">Постер New Orlean vs Golden Stars</h2>
+                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
                 <p class="text">Дизайн</p>
                 <!-- <p class="explanation">
               Технокряк это современная площадка распространения коронавируса.
